[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piazza-rescue"
version = "0.1.0"
description = "Local Piazza archiver with cookie auth, PDF capture, and SQLite FTS search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "browser-cookie3>=0.20.1",
  "piazza-api>=0.15.0",
]

[project.scripts]
piazza-rescue = "piazza_rescue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
